k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: baanlomnow
  labels:
    name: baanlomnow
    app: baanlomnow
