k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baanlomnow-service
  namespace: baanlomnow
  labels:
    app: baanlomnow
    component: app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: baanlomnow
    component: app
